--- a/Views/Events/Details.cshtml
+++ b/Views/Events/Details.cshtml
@@ -19,8 +19,8 @@
         }
         <h2>@Model.Title</h2>
         <p><strong>Category:</strong> @Model.Category</p>
-        <p><strong>Venue:</strong> @Model.Venue?.Name (@Model.Venue?.City)</p>
-        <p><strong>Dates:</strong> @Model.StartDate.ToShortDateString() - @Model.EndDate.ToShortDateString()</p>
+        <p><strong>Venue:</strong> @Model.VenueName</p>
+        <p><strong>Dates:</strong> @(Model.EndDate.HasValue ? Model.StartDate.ToShortDateString() + " - " + Model.EndDate.Value.ToShortDateString() : Model.StartDate.ToShortDateString())</p>
     </div>
     <div class="col-md-6">
         <h4>Register for this event</h4>
